# EngUlidor

./: .gitignore  Config.hs  Engulidor.cabal  Parser.hs  Test.hs  engulidor.cfg
src/: Config.hs  Data.hs  Main.hs  Parser.hs  TAGS  engulidor.cfg
